commit on 'Login-Signup'

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login / Sign Up Form</title>
-    <link rel="stylesheet" href="./Src/index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div class="container">
@@ -73,6 +73,6 @@
         </form>
     </div>
 
-    <script src="./Src/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
